Merge master into feature/tokenrefreshoptions (#13424)
* Skip Changelog processing for data track (#12787)

* Skip Changelog processing for data track

* Fix condition

* Update luis-authoring version from release

* ClassCastExceptionForTopQueryWithAggregate (#12633)

* FixForClassCastExceptionForTopDocumentQueryContext

Co-authored-by: Annie Liang <xinlian@microsoft.com>

* Adding namespace and missing exists methods (#12780)

* Add exists functionality.

* Add tests for existence.

* Add support for namespace operations.

* Add check for context.

* Fix test cases to use new test resources.

* Update README.md (#12756)

fix(maven groupId): Updated the groupId to point to the correct location.

* Not let our sample down if property 'azure.activedirectory.tenant-id' is not confugured. (#12645)

* Not let our sample down if property 'azure.activedirectory.tenant-id' is not confugured.

* Add NoLoginSecurityConfig to disable login.

* Add comment to explain what NoLoginSecurityConfig used for.

* Recover application.properties.

* Update readme to explain what 'NoLoginSecurityConfig' is used for.

Co-authored-by: Rujun Chen <rujche@microsoft.com>

* Servicebus track2 readme changes 10327 (#12735)

* readme changes

* Servicebus track2 live test receive renew lock (#12737)

* separating resource between live test
* Fixing live test

* disable flaky assert (#12793)

* fix bug of auto configuration of spring boot starters (#12795)

* mgmt regen resources (#12794)

* mgmt fix todo (#12798)

* support key curve name for EC key

* use flux for inputsteam

* Mgmt: Appplatform (#12350)

* feat: add api specs

* feat: generate app platform

* add pom.xml

* Add spring interface

* fix compile error

* add implementation

* add piggymetrics source code for test

* add unit test

* update test and some impl

* add spring service api in azure

* regen app platform

* fix compile error

* f